# Voice-Synth

./: pyproject.toml  showcase.ipynb
VoiceConductor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: general.md
examples/custom_provider_demo/: custom_provider_demo.py  main.py
tests/: test_config_api.py  test_manager.py  test_windows_provider.py
voice_conductor/: __init__.py  config.py  manager.py
voice_conductor/providers/: azure.py  base.py  demo.py  elevenlabs.py  kokoro.py  windows.py
