[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VoiceConductor"
version = "0.1.2"
description = "Importable text-to-speech package with Windows audio routing support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "msgpack>=1.0.7",
  "numpy>=1.26",
  "pypercache>=0.1.4",
  "sounddevice>=0.4.6",
]

[project.optional-dependencies]
elevenlabs = []
kokoro = [
  "kokoro>=0.9.4",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_conductor*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
pythonpath = ["."]
